[gd_scene load_steps=13 format=3 uid="uid://bg10c5o03uixf"]

[ext_resource type="Script" path="res://Scripts/Script_SysFSM/Script_FSM.gd" id="1_6f0a8"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Scritp_Player_Mover.gd" id="1_23hgj"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_Manager.gd" id="1_q7hbd"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_State_Idle.gd" id="2_l62w3"]
[ext_resource type="PackedScene" uid="uid://m3fcaerg6lcf" path="res://Assets/Assets_3DM/3DM_Arms/Assets_3DM_Arm.tscn" id="3_3v6tm"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_Raycast.gd" id="3_bii7p"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_State_Moving.gd" id="3_j7md2"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_State_Paused.gd" id="4_k652i"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_State_Talking.gd" id="5_u8ocn"]
[ext_resource type="Script" path="res://Scripts/Scripts_SysPlayer/Script_Player_Input.gd" id="6_748kp"]
[ext_resource type="PackedScene" uid="uid://3w2ibpmc3yy7" path="res://SytemNode/SN_Player/Prefab_crosshair.tscn" id="11_q2jkr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s773y"]

[node name="SN_Player" type="Node3D"]
script = ExtResource("1_q7hbd")

[node name="Player_Body" type="CharacterBody3D" parent="." node_paths=PackedStringArray("axis_arms")]
script = ExtResource("1_23hgj")
axis_arms = NodePath("Head_Holder/Player_Camera/Axis_Arms")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_s773y")

[node name="Axis_H" type="Node3D" parent="Player_Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Axis_V" type="Node3D" parent="Player_Body/Axis_H"]

[node name="Head_Holder" type="Node3D" parent="Player_Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Player_Camera" type="Camera3D" parent="Player_Body/Head_Holder"]

[node name="raycast_player" type="RayCast3D" parent="Player_Body/Head_Holder/Player_Camera"]
target_position = Vector3(0, 0, -4)
collision_mask = 2
script = ExtResource("3_bii7p")

[node name="Axis_Arms" type="Node3D" parent="Player_Body/Head_Holder/Player_Camera"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, -0.9, 0)

[node name="Assets_3DM_Arms" parent="Player_Body/Head_Holder/Player_Camera/Axis_Arms" instance=ExtResource("3_3v6tm")]
transform = Transform3D(-0.707107, -0.707107, -2.10734e-08, 0, 2.98023e-08, -1, 0.707107, -0.707107, -2.10734e-08, 0.421047, 0.65057, -0.670653)

[node name="Player_Foot" type="Node3D" parent="Player_Body"]

[node name="Finte_state_machine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("1_6f0a8")
current_state = NodePath("../Player_States/state_player_idle")

[node name="Player_States" type="Node" parent="."]

[node name="state_player_idle" type="Node" parent="Player_States" node_paths=PackedStringArray("player_input", "player_raycast")]
script = ExtResource("2_l62w3")
player_input = NodePath("../../Input_player")
player_raycast = NodePath("../../Player_Body/Head_Holder/Player_Camera/raycast_player")

[node name="state_player_moving" type="Node" parent="Player_States"]
script = ExtResource("3_j7md2")

[node name="state_player_paused" type="Node" parent="Player_States"]
script = ExtResource("4_k652i")

[node name="state_player_talking" type="Node" parent="Player_States"]
script = ExtResource("5_u8ocn")

[node name="Input_player" type="Node" parent="."]
script = ExtResource("6_748kp")

[node name="Player_Crosshair" parent="." node_paths=PackedStringArray("player_raycast") instance=ExtResource("11_q2jkr")]
player_raycast = NodePath("../Player_Body/Head_Holder/Player_Camera/raycast_player")
